Update documentation for offers update and delete. added function to delete offers.
